@@ -9,7 +9,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: winWm.test,v 1.9.2.3 2004/10/05 22:27:27 hobbs Exp $
+# RCS: @(#) $Id: winWm.test,v 1.9.2.4 2006/12/01 19:47:42 hobbs Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -232,7 +232,7 @@ test winWm-6.1 {wm attributes} win {
     destroy .t
     toplevel .t
     wm attributes .t
-} {-alpha 1.0 -disabled 0 -toolwindow 0 -topmost 0}
+} {-alpha 1.0 -transparentcolor {} -disabled 0 -toolwindow 0 -topmost 0}
 test winWm-6.2 {wm attributes} win {
     destroy .t
     toplevel .t
@@ -243,7 +243,7 @@ test winWm-6.3 {wm attributes} win {
     destroy .t
     toplevel .t
     list [catch {wm attributes .t -foo} msg] $msg
-} {1 {wrong # args: should be "wm attributes window ?-alpha ?double?? ?-disabled ?bool?? ?-toolwindow ?bool?? ?-topmost ?bool??"}}
+} {1 {wrong # args: should be "wm attributes window ?-alpha ?double?? ?-transparentcolor ?color?? ?-disabled ?bool?? ?-toolwindow ?bool?? ?-topmost ?bool??"}}
 
 test winWm-6.4 {wm attributes -alpha} win {
     # Expect this to return all 1.0 {} on pre-2K/XP
@@ -287,6 +287,27 @@ test winWm-6.6 {wm attributes -alpha} win {
 	}
     }
 } {}
+
+test winWm-6.7 {wm attributes -transparentcolor} win {
+    # Expect this to return all "" on pre-2K/XP
+    destroy .t
+    toplevel .t
+    set res {}
+    lappend res [wm attributes .t -transparentcolor]
+    # we don't return on set yet
+    lappend res [wm attributes .t -trans black]
+    lappend res [wm attributes .t -trans]
+    lappend res [wm attributes .t -trans "#FFFFFF"]
+    lappend res [wm attributes .t -trans]
+    destroy .t
+    set res
+} [list {} {} black {} "#FFFFFF"]
+
+test winWm-6.8 {wm attributes -transparentcolor} win {
+    destroy .t
+    toplevel .t
+    list [catch {wm attributes .t -tr foo} msg] $msg
+} {1 {unknown color name "foo"}}
 
 test winWm-7.1 {deiconify on an unmapped toplevel
         will raise the window and set the focus} {pcOnly} {
